@@ -1,3 +1,8 @@
+2003-07-19    Ping Cheng <pingc@wacom.com>
+	* Fixed Intuos tilt filter
+	* Send raw values of tilt, pressure, rotation and 4D mouse
+	* wheel to valuators when the device is in relative mode
+
 2003-07-16    Ping Cheng <pingc@wacom.com>
 	* Fixed Intuos filter to ignore the first sample
 	* Added noise reducing filter for all tablets
